--- a/thesis.tex
+++ b/thesis.tex
@@ -42,11 +42,11 @@
 \include{introduction}
 
 \part{The case facts}\label{part:case-facts}
-% \include{recurring-pattern}
-% \include{case-decomposition}
+\include{recurring-pattern}
+\include{case-decomposition}
 
 \part{Internal and external}\label{part:variation}
-% \include{case-competition-typology}
+\include{case-competition-typology}
 \include{committee}
 
 \bookmarksetup{startatroot}
