--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -8,12 +8,12 @@ In Part \ref{part:case-facts} of this dissertation, I discussed a first aspect o
 
 In Chapter \ref{ch:decomposition} within Part \ref{part:case-facts}, I argued that a cumulative case decomposition can derive the case scale. This does not only hold for case competition in headless relatives, but also for syncretism patterns and morphological case containment patterns. In a cumulative case composition, the scale in \ref{ex:case-scale-two-patterns} can be interpreted as follows: the accusative contains all features the nominative contains plus one more. Similarly, the dative contains all features the accusative contains plus one. Therefore, the dative can be considered more complex than the accusative, and the accusative more complex than the nominative. In line with that, I refer to cases more to the right on the case scale as being more complex cases than cases more to the left on the scale.
 
-This part of the dissertation, Part \ref{part:variation}, focuses on a second aspect to headless relatives. This aspect is not stable crosslinguistically, but it differs across languages. Languages differ in whether they allow the internal case (the case from the relative clause) and the external case (the case from the main clause) to surface when either of them wins the case competition. Metaphorically speaking, even though a case wins the case competition, it is a second matter whether it is allowed to come forward as a winner. Four patterns are logically possible for languages: (1) the internal case and the external case are allowed to surface, (2) only the internal case is allowed to surface, and the external case is not, (3) only the external case is allowed to surface, and the internal case is not, (4) neither the internal nor the external case is allowed to surface.\footnote{
+This part of the dissertation, Part \ref{part:variation}, focuses on a second aspect to headless relatives. This aspect is not stable crosslinguistically, but it differs across languages. Languages differ in whether they allow the internal case (the case from the relative clause) and the external case (the case from the main clause) to surface when either of them wins the case competition. Metaphorically speaking, even though a case wins the case competition, it is a second matter whether it is allowed to come forward as a winner. Four patterns are logically possible for languages: (1) the internal case and the external case are allowed to surface when either of them wins the case competition, (2) only the internal case is allowed to surface when it wins the case competition, and the external case is not, (3) only the external case is allowed to surface when it wins the case competition, and the internal case is not, (4) neither the internal case nor the external case is allowed to surface when either of them wins the competition.\footnote{
 On the surface, the last pattern cannot be distinguished from a language that does not have case competition and does not allow for any case mismatches. I come back to this matter in \ref{sec:possible-patterns}, where I argue that there actually is case competition in play.
 }
 I show in this chapter that one of these logically possible patterns is not attested in any natural language.
 
-In this dissertation I discuss languages of which headless relatives have been described in the literature. As I write about case competition, I only focus on languages that morphologically distinguish between case, specifically the nominative, the accusative and the dative. By no means do I claim that my language sample is representative for the languages of the world. However, they build on independently and strongly established facts, which are the case scale from Chapter \ref{ch:recurring} and the subset requirement of the external head, to be discussed in Chapter \ref{ch:relativization}. Therefore, I predict that my generalizations hold for all natural languages.
+In this dissertation I discuss languages of which headless relatives have been described in the literature. As I write about case competition, I only focus on languages that morphologically distinguish between case, specifically the nominative, the accusative and the dative. By no means do I claim that my language sample is representative for the languages of the world. However, they build on independently established facts, which are the case scale from Chapter \ref{ch:recurring} and the subset requirement of the external head, to be discussed in Chapter \ref{ch:relativization}. Therefore, I predict that my generalizations hold for all natural languages.
 
 The next section introduces the patterns that are logically possible with case competition. In Section \ref{sec:pattern-i} to Section \ref{sec:pattern-iv}, I discuss the patterns one by one, and I give examples when the pattern is attested. In Section \ref{sec:without-case-competition}, I make a sidestep to languages that do not show any case competition, and I give a typology of headless relatives.
 
@@ -24,9 +24,9 @@ Case competition has two aspects. The first aspect is the topic of Part \ref{par
 
 Metaphorically, the second aspect can be described as a language-specific approval committee. The committee learns (from the first aspect) which case wins the case competition. Then it can either approve this case or not approve it. This approval happens based on where the winning case comes from: from inside to the relative clause (internal) or from outside to the relative clause (external). It is determined per language whether it approves the internal case, the external case, both of them or none of them. The approval committee can only approve the winner of the competition or deny it, it cannot propose an alternative winner. In this metaphor, the approval of the committee means that a particular case is allowed to surface. When the case is not allowed to surface, the headless relative as a whole is ungrammatical.
 
-Taking this all together, there are four patterns possible in languages. First, the internal case and the external case are allowed to surface. Second, only the internal case is allowed to surface, and the external case is not. Third, only the external case is allowed to surface, and the internal case is not. Fourth, neither the internal nor the external case is allowed to surface. In what follows, I introduce these four possible patterns.
+Taking this all together, there are four patterns possible in languages. First, the internal case and the external case are allowed to surface. Second, only the internal case is allowed to surface, and the external case is not. Third, only the external case is allowed to surface, and the internal case is not. Fourth, neither the internal case nor the external case is allowed to surface when either of them wins the competition. In what follows, I introduce these four possible patterns.
 
-The first possible pattern is that of a language that allows the internal case and the external case to surface when either of them wins the case competition. This pattern might look familiar, because it is the one that Gothic has, which I discussed in Chapter \ref{ch:recurring}. Table \ref{tbl:case-competition-int-ext} (repeated from Table \ref{tbl:summary-gothic-simple}) illustrates what the pattern for such a language looks like.
+The first possible pattern is that of a language that allows the internal case and the external case to surface when either of them wins the case competition. I call this the non-matching type of language \citep[just as cf.][]{grosu1987,cinqueforthcoming}: the internal and external case do not need to match. The pattern might look familiar, because it is the one that Gothic has, which I discussed in Chapter \ref{ch:recurring}. Table \ref{tbl:case-competition-int-ext} (repeated from Table \ref{tbl:summary-gothic-simple}) illustrates what the pattern for such a language looks like.
 
 The left column shows the internal case between square brackets. The top row shows the external case between square brackets. The other cells indicate the case of the relative pronoun.
 The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition.
@@ -62,12 +62,12 @@ All these instances are grammatical.
     \label{tbl:case-competition-int-ext}
 \end{table}
 
-The second possible pattern is that of a language that allows the internal case to surface when it wins the case competition, but it does not allow the external case to do so. In this type of language, the internal case gets to surface when it is more complex than the external one. When the external case is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical.
+The second possible pattern is that of a language that allows the internal case to surface when it wins the case competition, but it does not allow the external case to do so. In this type of language, the internal case gets to surface when it is more complex than the external one. When the external case is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical. I call this the `non-matching --- internal only' type of language: the internal and external case do not need to match, but only the internal case is allowed to surface as a winner.
 
-Table \ref{tbl:case-competition-only-int} illustrates what the pattern for such a language looks like. Compared to the first pattern, it has three cells in which there is no grammatical relative pronoun.
+Table \ref{tbl:case-competition-only-int} illustrates what the pattern for such a language looks like. Compared to the internal-and-external pattern, it has three cells in which there is no grammatical relative pronoun.
 The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match.
 The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition.
-Just as in the first pattern, these six instances are grammatical.
+Just as in the internal-and-external pattern, these six instances are grammatical.
 The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. These instances are not grammatical for this type of language. The reasoning behind that is that the language does not allow the external case to surface when it wins the case competition.
 
 \begin{table}[H]
@@ -100,12 +100,12 @@ The three cells in the top-right corner, marked in dark gray, are the situations
     \label{tbl:case-competition-only-int}
 \end{table}
 
-The third possible pattern is that of a language that allows the external case to surface when it wins the case competition, but it does not allow the internal case to do so. In this type of language, only the external case gets to surface when it is more complex. When the internal case is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical.
+The third possible pattern is that of a language that allows the external case to surface when it wins the case competition, but it does not allow the internal case to do so. In this type of language, only the external case gets to surface when it is more complex. When the internal case is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical. I call this the `non-matching --- external only' type of language: the internal and external case do not need to match, but only the external case is allowed to surface as a winner.
 
 Table \ref{tbl:case-competition-only-ext} illustrates what the pattern for such a language looks like. Comparing this pattern to the second one, the ungrammatical cells are here the three on the other side of the diagonal.
-The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. Just as in the first and second pattern, these instances are grammatical.
-The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Unlike in the first and the second pattern, these instances are not grammatical for this type of language. The reasoning behind that is that the language does not allow the internal case to surface when it wins the case competition.
-The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as in the first pattern but unlike in the second pattern, these instances are grammatical.
+The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. Just as in the internal-and-external and the internal-only pattern, these instances are grammatical.
+The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Unlike in the internal-and-external and the internal-only pattern, these instances are not grammatical for this type of language. The reasoning behind that is that the language does not allow the internal case to surface when it wins the case competition.
+The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as in the internal-and-external pattern but unlike in the internal-only pattern, these instances are grammatical.
 
 \begin{table}[H]
   \center
@@ -137,18 +137,18 @@ The three cells in the top-right corner, marked in dark gray, are the situations
     \label{tbl:case-competition-only-ext}
 \end{table}
 
-The fourth possible pattern is that of a language that allows neither the internal nor the external case to surface when either of them wins the case competition. When the internal case or the external is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible.
+The fourth possible pattern is that of a language that allows neither the internal case nor the external case to surface when either of them wins the competition. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible. Only when there is a tie, i.e. when the internal and external case match, there is a grammatical result. I call this the `matching' type of language: the internal and external case need to match.
 
 Table \ref{tbl:case-competition-none} illustrates what the pattern for such a language looks like.
-The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. Just as in the first, second and third pattern, these instances are grammatical.
-The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Just as the third pattern, but unlike the first and the second pattern, these instances are not grammatical for this type of language.
-The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as the second pattern, but unlike the first and the third pattern, these instances are not grammatical for this type of language. The reasoning behind the ungrammaticality of these six cells is that the language allow neither the internal case nor the external case to surface when either of them wins the case competition.
+The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. Just as in the other three pattern, these instances are grammatical.
+The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Just as the external-only pattern, but unlike the internal-and-external and the internal-only pattern, these instances are not grammatical for this type of language.
+The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as the internal-only pattern, but unlike the internal-and-external and the external-only pattern, these instances are not grammatical for this type of language. The reasoning behind the ungrammaticality of these six cells is that the language allows neither the internal case nor the external case to surface when either of them wins the competition.
 
 On the surface, this pattern cannot be distinguished from a pattern that does not have case competition and does not allow for any case mismatches. I understand `a language with case competition' as a language that compares the internal and external case in its headless relatives. If the internal and external case are not compared in this type of language, it would be unclear why the diagonal is different from all the other cells. The source of ungrammaticality for the cells in Table \ref{tbl:case-competition-none} can only come from the comparing the internal and external case and concluding that the internal case and the external case differ. The grammaticality of the diagonal follows from the conclusion that the internal and the external case match. In Section \ref{sec:without-case-competition} I discuss languages in which the internal and external case are not compared to each other.
 
 \begin{table}[H]
   \center
-  \caption{Neither internal nor external allowed}
+  \caption{Only matching allowed}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -176,8 +176,7 @@ On the surface, this pattern cannot be distinguished from a pattern that does no
     \label{tbl:case-competition-none}
 \end{table}
 
-In this chapter I show that three of these four patterns I introduced are attested crosslinguistically. Section \ref{sec:pattern-i} shows that the first pattern, in which either the internal case or the external case can surface, is exemplified by Gothic (repeated from Chapter \ref{ch:recurring}) and by Old High German. The second pattern, in which only the internal case can surface, is illustrated by Modern German in Section \ref{sec:pattern-ii}. To my knowledge, there is no language in which only the external case can surface when it wins the case competition. This is discussed in \ref{sec:pattern-iii}. Section \ref{sec:pattern-iv} shows a language that allows neither the internal nor the external case to surface when either of them wins the competition, namely Polish.
-
+In this chapter I show that three of these four patterns I introduced are attested crosslinguistically. Section \ref{sec:pattern-i} shows that the internal-and-external pattern, in which either the internal case or the external case can surface, is exemplified by Gothic (repeated from Chapter \ref{ch:recurring}) and by Old High German. The internal-only pattern, in which only the internal case can surface, is illustrated by Modern German in Section \ref{sec:pattern-ii}. To my knowledge, there is no language in which only the external case can surface when it wins the case competition. This is discussed in \ref{sec:pattern-iii}. Section \ref{sec:pattern-iv} shows a language that only allows the case to surface when there is a tie, i.e. when the internal and external case match, namely Polish.
 
 \section{Internal and external case allowed}\label{sec:pattern-i}
 
@@ -233,7 +232,7 @@ What, to my knowledge, has not been studied systematically is whether Old High G
 }
 The examples follow the spelling and the detailed glosses in ANNIS. The translations are my own.
 
-First I discuss examples in which the internal and the external case match, and then examples in which they differ. If the internal case and the external case are identical, the relative pronoun simply surfaces in that case. I illustrate this for the nominative, the accusative and the dative.
+First I discuss examples in which the internal and the external case match, and then examples in which they differ. If the internal case and the external case are identical, so there is a tie, the relative pronoun simply surfaces in that case. I illustrate this for the nominative, the accusative and the dative.
 
 Consider the example in \ref{ex:ohg-nom-nom}, in which the internal nominative case competes against the external nominative case.
 The internal case is nominative, as the predicate \tit{senten} `to send' takes nominative subjects.
@@ -289,7 +288,7 @@ These findings can be summarized as in Table \ref{tbl:summary-ohg-matching}. The
       [\ac{dat}]
           &
           &
-          & \ac{dat}
+          & (\ac{dat})
           \\
     \bottomrule
   \end{tabular}
@@ -346,7 +345,7 @@ The two examples in which the nominative and the accusative compete are highligh
       [\ac{dat}]
           &
           &
-          & \ac{dat}
+          & (\ac{dat})
           \\
     \bottomrule
   \end{tabular}
@@ -400,7 +399,7 @@ The two examples in which the nominative and the dative compete are highlighted 
       [\ac{dat}]
           & \cellcolor{LG}\ac{dat}
           &
-          & \ac{dat}
+          & (\ac{dat})
           \\
     \bottomrule
   \end{tabular}
@@ -454,7 +453,7 @@ The two examples in which the accusative and the dative compete are highlighted 
       [\ac{dat}]
           & \ac{dat}
           & \cellcolor{LG}\ac{dat}
-          & \ac{dat}
+          & (\ac{dat})
           \\
     \bottomrule
   \end{tabular}
@@ -516,7 +515,7 @@ This section discusses the situation in which only the internal case is allowed 
 
 An example of a language that shows this pattern is Modern German. In this section I discuss the Modern German data, based on the research of \citet{vogel2001}. The examples and the judgements are \posscitet{vogel2001}. I made the glosses more detailed, and I added translations where they were absent.
 
-First I discuss examples in which the internal and the external case match, and then examples in which they differ. If the internal case and the external case are identical, the relative pronoun simply surfaces in that case. I illustrate this for the nominative, the accusative and the dative.
+First I discuss examples in which the internal and the external case match, and then examples in which they differ. If the internal case and the external case are identical, so there is a tie, the relative pronoun simply surfaces in that case. I illustrate this for the nominative, the accusative and the dative.
 
 Consider the example in \ref{ex:mg-nom-nom}, in which the internal nominative case competes against the external nominative case.
 The internal case is nominative, as the predicate \tit{mögen} `to like' takes nominative subjects.
@@ -969,13 +968,13 @@ To sum up, to my knowledge, there is no language in which only the external case
 
 
 
-\section{Internal and external case not allowed}\label{sec:pattern-iv}
+\section{Only matching allowed}\label{sec:pattern-iv}
 
-This section discusses the situation in which neither the internal nor the external case is allowed to surface when either of them wins the case competition. When the internal case or the external is more complex, the result is ungrammatical. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible. Only when the internal and external case are identical, it is possible to make headless relative. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-none-repeated}.
+This section discusses the situation in which the case is neither the internal case nor the external case allowed to surface when either of them wins the competition. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible. Only when there is a tie, i.e. when the internal and external case match, there is a grammatical result. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-none-repeated}.
 
 \begin{table}[H]
   \center
-  \caption{Neither internal nor external allowed (repeated)}
+  \caption{The `matching' type (repeated)}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -1003,9 +1002,9 @@ This section discusses the situation in which neither the internal nor the exter
     \label{tbl:case-competition-none-repeated}
 \end{table}
 
-An example of a language that shows this pattern is Polish. In this section I discuss the Polish data, based on the research of \citet{citko2013} after \citet{himmelreich2017}. I only go through the case competition between accusative and dative, as only this data is discussed. This does not change anything about the point I am making here: the only kind of system that is compatible with the examples given is the one in which neither the internal nor the external case is allowed to surface. I made the glosses more detailed, and I added translations where they were absent.
+An example of a language that shows this pattern is Polish. In this section I discuss the Polish data, based on the research of \citet{citko2013} after \citet{himmelreich2017}. I only go through the case competition between accusative and dative, as only this data is discussed. This does not change anything about the point I am making here: the only kind of system that is compatible with the examples given is the one in which the case is allowed to surface in neither the internal case nor in the external case, when either of them wins the case competition. I made the glosses more detailed, and I added translations where they were absent.
 
-First I discuss examples in which the internal and the external case match, and then examples in which they differ. If the internal case and the external case are identical, the relative pronoun simply surfaces in that case. I illustrate this for the nominative, the accusative and the dative.
+First I discuss examples in which the internal and the external case match, and then examples in which they differ. If the internal case and the external case are identical, so there is a tie, the relative pronoun simply surfaces in that case. I illustrate this for the nominative, the accusative and the dative.
 
 Consider the example in \ref{ex:polish-acc-acc}, in which the internal accusative case competes against the external accusative case.
 The internal case and external case are accusative, as the predicate \tit{lubić} `to like' in both clauses takes accusative objects.
@@ -1050,7 +1049,7 @@ These findings can be summarized as in Table \ref{tbl:summary-polish-matching}. 
 
 In Table \ref{tbl:summary-polish-matching}, two cells remain empty. These are the cases in which the internal and the external case differ. In the remainder of this section, I discuss them one by one.
 
-I give examples from the case competition between accusative and dative. According to the case scale, the dative would win over the accusative. However, as neither the internal nor the external case is allowed to surface when either of them wins the case competition, all examples are ungrammatical.
+I give examples from the case competition between accusative and dative. According to the case scale, the dative would win over the accusative. However, as the case is neither allowed to surface in the internal case nor in the external case, all examples are ungrammatical.
 
 I start with the situation in which the internal case wins the competition, and there is no grammatical outcome possible, whichever case the relative pronoun appears in.
 Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal dative case competes against the external accusative case.
@@ -1112,7 +1111,7 @@ The dark gray marking corresponds to \ref{ex:polish-dat-acc}, in which the exter
     \label{tbl:summary-polish-acc-dat}
 \end{table}
 
-In sum, Polish is an instance of a language that allows neither the internal case nor the external case to surface. When the internal and the external case differ in Polish, there is no way to form a grammatical headless relative construction.
+In sum, Polish is an instance of a language that only allows for matching cases. When the internal and the external case differ in Polish, there is no way to form a grammatical headless relative construction.
 
 \section{Summary}\label{sec:summary-3-patterns}
 
@@ -1156,10 +1155,10 @@ The second aspect is whether the internal and the external case are allowed to s
 
 \ex. Logically possibile language types\label{ex:logical-possibilities}
 \let\oldalph=\alph\let\alph=\roman
-\a. The internal-and-internal type: the internal and the external case are allowed to surface when either of them wins the case competition\label{ex:int-ext}
-\b. The internal-only type: only the internal case is allowed to surface when it wins the case competition\label{ex:int-only}
-\b. The external-only type: only the external case is allowed to surface when it wins the case competition\label{ex:ext-only}
-\b. The matching type: the case is only allowed to surface when it is both the internal and external case (i.e. when the cases match)\label{ex:matching}
+\a. The `non-matching' type: the internal and the external case are allowed to surface when either of them wins the case competition\label{ex:int-ext}
+\b. The `non-matching --- internal only' type: only the internal case is allowed to surface when it wins the case competition\label{ex:int-only}
+\b. The `non-matching --- external only' type: only the external case is allowed to surface when it wins the case competition\label{ex:ext-only}
+\b. The `matching' type: neither the internal case nor in the external case is allowed to surface when either of them wins the case competition\label{ex:matching}
 \global\let\alph=\oldalph
 
 As far as I am aware, not all of these logical possibilities are attested in natural languages. I discuss the types one by one, and I give example when they are attested. In my description, I refer to the differ gray-marking in Table \ref{tbl:case-competition-table-marking}. The cells marked in light gray are the ones in which the internal case wins the case competition, the cells marked in dark gray are the ones in which the external case wins the case competition, and the unmarked cells are the ones in which the internal and external case match.
@@ -1696,9 +1695,10 @@ In sum, Old English and Modern Greek are languages without case competition in t
 
 \subsection{A typology of headless relatives}\label{sec:typology}
 
-This section provides a typological overview of headless relatives. First, I describe the difference between the patterns of languages with and without case competition. Second, I include the parameters of non-case competition languages in the diagram I introduced in Section \ref{sec:summary-3-patterns}. Third, I give an overview of all logically possible patterns, and I show how the diagram generates the attested ones and does not generate the ones that are not attested.
+This section provides a typological overview of headless relatives. First, I describe the difference between the patterns of languages with and without case competition. Second, I include the parameters of non-case competition languages in the diagram I introduced in Section \ref{sec:summary-3-patterns}. Third, I give an overview of all logically possible patterns, I show how the diagram generates the attested ones, and I discuss the non-attested patterns.
 
-In Section \ref{sec:pattern-i} to \ref{sec:pattern-iv}, I discussed four different patterns that are all derived from the same table. The relative pronoun appears in the case that wins the case competition, as shown in Table \ref{tbl:case-competition-int-ext-typology} (repeated from Section \ref{sec:pattern-i}). The variation between the four patterns arises from allowing either the internal case, the external case, both of them or neither of them to surface.
+In Section \ref{sec:pattern-i} to \ref{sec:pattern-iv}, I discussed four different patterns. These four patterns are all based on a single table, shown in Table \ref{tbl:case-competition-int-ext-typology} (repeated from Section \ref{sec:pattern-i}). The cases in the cells are the ones that win the case competition.
+The variation between the four patterns lies in whether all cells in the table are grammatical, or whether some of them are not. In none of the four patterns in Section \ref{sec:pattern-i} to \ref{sec:pattern-iv}, the cells are filled by a case different from what is given in \ref{tbl:case-competition-int-ext-typology}.
 
 \begin{table}[H]
   \center
@@ -1807,45 +1807,36 @@ If the language lets its relative pronouns appear in the external case, the patt
     \begin{tikzpicture}[node distance=1.5cm]
       \footnotesize{
     \node (question1) [question]
-    {case\\ competition?};
-        \node (question4) [question, below of=question1, xshift=-2.5cm, yshift=-1cm]
-        {\ac{int}/\ac{ext}?};
-            \node (outcome5) [outcome, below of=question4, xshift=-1.5cm]
-            {\ac{int}};
-                \node (example5) [example, below of=outcome5, yshift=0.25cm]
-                {\scriptsize{n.a. (1)\\\phantom{x}}};
-            \node (outcome1) [outcome, below of=question4, xshift=1.5cm]
-            {\ac{ext}};
-                \node (example1) [example, below of=outcome1, yshift=0.25cm]
-                {\scriptsize{e.g. Old English, Modern Greek (5)}};
-        \node (question2) [question, below of=question1, xshift=2.5cm, yshift=-1cm]
-        {\ac{int} as winner?};
-            \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
-            {matching};
-                \node (example2) [example, below of=outcome2, yshift=0.25cm]
-                {\scriptsize{e.g. Polish (9)\\\phantom{x}}};
-            \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
-            {\ac{ext} as winner?};
-                \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
-                {\ac{int} + complex};
-                    \node (example3) [example, below of=outcome3, yshift=0.25cm]
-                    {\scriptsize{e.g. Modern German (3)\\\phantom{x}}};
-                \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
-                {complex};
-                    \node (example3) [example, below of=outcome4, yshift=0.25cm]
-                    {\scriptsize{e.g. Gothic, Old High German, Classical Greek (2)}};
+    {cases\\ considered:};
+        \node (outcome1) [outcome, below of=question1, xshift=-1.5cm]
+        {\ac{ext}};
+            \node (example1) [example, below of=outcome1, yshift=0.25cm]
+            {\scriptsize{e.g. Old English, Modern Greek (5)}};
+    \node (question2) [question, below of=question1, xshift=2cm, yshift=-0.5cm]
+    {allow mismatches?};
+        \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
+        {matching};
+            \node (example2) [example, below of=outcome2, yshift=0.25cm]
+            {\scriptsize{e.g. Polish\\\phantom{x}}};
+        \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
+        {cases allowed:};
+            \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
+            {\ac{int} + complex};
+                \node (example3) [example, below of=outcome3, yshift=0.25cm]
+                {\scriptsize{e.g. Modern German\\\phantom{x}}};
+            \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
+            {complex};
+                \node (example4) [example, below of=outcome4, yshift=0.25cm]
+                {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
 
-    \draw [arrow] (question1) -- node[anchor=west] {yes} (question2);
+    \draw [arrow] (question1) -- node[anchor=north west] {\ac{int} + \ac{ext}} (question2);
+    \draw [arrow] (question1) -- node[anchor=east] {\ac{ext}} (outcome1);
     \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
     \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
-    \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-    \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
-    \draw [arrow] (question1) -- node[anchor=east] {no} (question4);
-    \draw [arrow] (question4) -- node[anchor=east] {\tsc{int}} (outcome5);
-    \draw [arrow] (question4) -- node[anchor=west] {\tsc{ext}} (outcome1);
+    \draw [arrow] (question3) -- node[anchor=east] {\ac{int}} (outcome3);
+    \draw [arrow] (question3) -- node[anchor=west] {\ac{int} + \ac{ext}} (outcome4);
     }
     \end{tikzpicture}
-
     \caption{Attested patterns in headless relatives}
     \label{fig:typology}
 \end{figure}
@@ -1881,7 +1872,7 @@ In what follows I show how Figure \ref{fig:typology} generates of all logically 
 
 I start with the leftmost pattern in Figure \ref{fig:typology}, which is number 1 in Table \ref{tbl:possible-headless-relatives}. In this pattern, there is no case competition, and the relative pronoun surfaces in the internal case. As I mentioned earlier, I am not aware of a language that exemplified this pattern and future research should tell whether this option is attested or whether it should be excluded.
 The second pattern in Figure \ref{fig:typology} is number 5 in Table \ref{tbl:possible-headless-relatives}. In this pattern, there is no case competition, and the relative pronoun surfaces in the external case. This pattern is exemplified by Old English and Modern Greek.
-The third pattern in Figure \ref{fig:typology} is number 9 in Table \ref{tbl:possible-headless-relatives}. In this pattern, there is case competition, and the relative pronoun is neither allowed to surface in the internal case nor in the external case when either of them wins the case competition. This pattern is exemplified by Polish.
+The third pattern in Figure \ref{fig:typology} is number 9 in Table \ref{tbl:possible-headless-relatives}. In this pattern, there is case competition, and the relative pronoun is only allowed to surface in the case when there is a tie, i.e. when the internal and external case match. This pattern is exemplified by Polish.
 The fourth pattern in Figure \ref{fig:typology} is number 3 in Table \ref{tbl:possible-headless-relatives}. In this pattern, there is case competition, and the relative pronoun is only allowed to surface in the internal case when it wins the case competition. This pattern is exemplified by Modern German.
 The fifth and last pattern in Figure \ref{fig:typology} is number 2 in Table \ref{tbl:possible-headless-relatives}. In this pattern, there is case competition, and the relative pronoun is allowed to surface in the internal case and the external case when either of them wins the case competition. This pattern is exemplified by Old High German, Gothic and Classical Greek.
 
